corrected configure files

--- a/stt/test.ipynb
+++ b/stt/test.ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d202d122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# accelerate config\n",
+    "\n",
+    "# accelerate launch --num_processes 4 --mixed_precision fp16 train_whisper_accelerate.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd9b8ce",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a2181354",
    "metadata": {},
    "outputs": [
@@ -30,7 +48,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_parquet(\"data/train-00000-of-00026.parquet\")\n",
-    "print(df.head())\n"
+    "print(df.head())"
    ]
   },
   {
